--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadless",
+    "test:coverage": "ng test --code-coverage --watch=false --browsers=ChromeHeadless",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "format:check": "prettier --check \"src/**/*.{ts,html,css,scss,json}\"",
+    "format:write": "prettier --write \"src/**/*.{ts,html,css,scss,json}\"",
+    "serve:prod": "ng serve --configuration production",
+    "analyze": "ng build --configuration production --stats-json && npx webpack-bundle-analyzer dist/componenttesting-ex/stats.json"
   },
   "private": true,
   "dependencies": {
